--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="header"> 
         <div class="container">
             <nav>
-                <p class="logo"><span>A</span>ditya.</p>
+                <p class="logo"><span>A</span>kshay.</p>
                 <ul id="sidemenu">
                     <li><a href="#header">Home</a></li>
                     <li><a href="#about">About</a></li>
