--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
                     <div class="social-icons">
                         <a href="https://facebook.com/"><i class="fab fa-facebook"></i></a>
                         <a href="#"><i class="fab fa-twitter-square"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://www.instagram.com/_akshay_jangra/"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.linkedin.com/in/akshay-kumar-3a7019203/"><i class="fab fa-linkedin"></i></a>
                     </div>
                     <a href="images/my-cv.pdf" download class="btn btn2">Download CV</a>
                 </div>
