--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                     <p><i class="fas fa-paper-plane"></i>akshayjangra225@gmail.com</p>
                     <p><i class="fas fa-phone-square-alt"></i>9988890225</p>
                     <div class="social-icons">
-                        <a href="https://facebook.com/"><i class="fab fa-facebook"></i></a>
+                        <a href="https://www.facebook.com/profile.php?id=100015489216292"><i class="fab fa-facebook"></i></a>
                         <a href="#"><i class="fab fa-twitter-square"></i></a>
                         <a href="https://www.instagram.com/_akshay_jangra/"><i class="fab fa-instagram"></i></a>
                         <a href="https://www.linkedin.com/in/akshay-kumar-3a7019203/"><i class="fab fa-linkedin"></i></a>
