--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
                             <li><span>UI/UX</span><br>Designing Web/App interfaces</li>
                             <li><span>Web Development</span><br>Web app Development</li>
                             <li><span>App Development</span><br>Building Android/iOS apps</li>
+                            <li><span>2022</span><br>Mean stack developer</li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="experience">
@@ -156,7 +157,7 @@
                 <div class="contact-left">
                     <h1 class="sub-title">Contact Me</h1>
                     <p><i class="fas fa-paper-plane"></i>akshayjangra225@gmail.com</p>
-                    <p><i class="fas fa-phone-square-alt"></i>9988890225</p>
+                    <p><i class="fas fa-phone-square-alt"></i>+91 9988890225</p>
                     <div class="social-icons">
                         <a href="https://www.facebook.com/profile.php?id=100015489216292"><i class="fab fa-facebook"></i></a>
                         <a href="#"><i class="fab fa-twitter-square"></i></a>
