--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </nav>
             <div class="header-text">
                 <p>Web Designer</p>
-                <h1>Hi, I'am <span>Akshay </span><br>Jangra From India<br>Punjab</h1>
+                <h1>Hi, I'am <span>Akshay </span><br>Jangra From Punjab<br>India</h1>
             </div>
         </div>
     </div>
@@ -61,7 +61,7 @@
                             <li><span>UI/UX</span><br>Designing Web/App interfaces</li>
                             <li><span>Web Development</span><br>Web app Development</li>
                             <li><span>App Development</span><br>Building Android/iOS apps</li>
-                            <li><span>2022</span><br>Mean stack developer</li>
+                            <li><span>2022</span><br>MERN stack developer</li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="experience">
